fix overflow for year buttons

--- a/static/css/pastGames.css
+++ b/static/css/pastGames.css
@@ -1,4 +1,8 @@
-#past-games {
+.year-select {
+  width: 100%;
+}
+
+.past-games {
   background-color: var(--background-color3);
   padding: 1em 5em;
 }
